# mdbook-chapter-number

./: .tagpr  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml  tagpr.yaml
example/: book.toml
example/src/: SUMMARY.md  chapter_1_1.md
src/: chapter_number.rs  main.rs
