[package]
name = "mdbook-section-number"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = { version = "0.4.21", default-features = false }
structopt = "0.3.26"
serde_json = "1.0.85"
markdown = "0.3.0"

[dev-dependencies]
pretty_assertions = "1.3.0"