[package]
name = "mdbook-chapter-number"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A mdBook preprocessor that adds chapter numbers to the each page header"
homepage = "https://github.com/Mura-Mi/mdbook-chapter-number"
repository = "https://github.com/Mura-Mi/mdbook-chapter-number"
readme = "README.md"
keywords = ["mdbook", "preprocessor", "markdown"]
exclude = [".idea", ".gitignore", ".github"]

[dependencies]
mdbook = { version = "0.4.21", default-features = false }
structopt = "0.3.26"
serde_json = "1.0.116"
pulldown-cmark = "0.9.2"
pulldown-cmark-to-cmark = "10.0.4"

[dev-dependencies]
pretty_assertions = "1.3.0"